<resources>
    <string name="app_name">Condominium</string>

    <!-- Menu -->
    <array name="main_menu_items">
        <item>Profile</item>
        <item>Events</item>
        <item>Services</item>
    </array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_login">Login</string>
    <string name="action_create_account">Don\'t have an account? Register here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out_toast_message">Signed out</string>
    <string name="authentication_fail_toast_message">Authentication failed.\u0020</string>
    <string name="required">Required</string>
    <string name="check_internet_connection_toast">Please, check your internet connection</string>

    <!-- Related with resident profile -->
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="house_number">House Number:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="city">City:</string>
    <string name="condominium">Condominium:</string>
    <string name="personal_info_title">Personal Info</string>
    <string name="residence_info_title">Residence Info</string>
    <string name="load_available_conds">Search</string>
    <string name="no_city_name_toast">Please input a city name</string>
    <string name="no_condominium_for_city_toast">No condominium found for this city</string>

    <!-- Related with condominium profile -->
    <string name="condominium_name">Name: </string>
    <string name="condominium_address">Address:</string>
    <string name="condominium_number">Number:</string>
    <string name="condominium_zip_code">Zip code:</string>
    <string name="condominium_state">State:</string>
    <string name="condominium_city">City:</string>
    <string name="condominium_general_info">General Info</string>
    <string name="cond_common_areas">Common Areas</string>
    <string name="gourmet_area">Gourmet area</string>
    <string name="pool_area">Pool area</string>
    <string name="barbecue_area">Barbecue area</string>
    <string name="movies_area">Movies area</string>
    <string name="party_room_area">Party room area</string>
    <string name="sports_court_area">Sports court area</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cond_not_found">Cond not found</string>
    <string name="insert_all_required_fiels_toast">Please insert all required fields.</string>
    <string name="cond_created_success">Condominium added with success!</string>
    <string name="cond_created_fail">Failed to add Condominium.</string>
    <string name="cond_already_exists">Condominium already exists!</string>
    <string name="resident_created_success">Resident created with success!</string>
    <string name="resident_created_fail">Failed create resident.</string>
    <string name="dialog_create_cond">Do you want to create an account for your condominium?</string>
    <string name="cancel">Cancel</string>

    <string-array name="brazilian_states_abb">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

    <string name="user">User</string>
    <string name="cond">Cond</string>

    <!-- Related with events -->
    <string name="no_scheduled_events">No scheduled events</string>
    <string name="scheduled_events">Scheduled events</string>
    <string name="add_event">Add event</string>
    <string name="general_info">General Info</string>
    <string name="time">Time</string>
    <string name="event_name">Event Name:</string>
    <string name="event_date">Event Date:</string>
    <string name="event_reserved_area">Reserved area</string>
    <string name="event_amount_of_people">Amount of people</string>
    <string name="event_begin_time">Begin: </string>
    <string name="event_end_time">Until:</string>
    <string name="event_created_success">Event created with success!</string>
    <string name="event_created_fail">Failed create event.</string>
    <string name="my_events">My events</string>
    <string name="all_events">All events</string>
    <string name="create_event">Create event</string>
    <string name="cond_has_no_common_area">Condominium have no common areas</string>
    <string name="event_same_day_same_place">There is another event already reserved at the same day and same please.</string>
    <string name="event_deleted_with_success">Event deleted with success!</string>
    <string name="event_delete_error">Error in deleting event</string>
    <string name="no_internet_for_loading_events_toast">Events cannot be loaded because you have no internet connection</string>
    <string name="loading_events_toast">Loading events...</string>

    <!-- related profile Activity -->
    <string name="chose_a_profile_title">Chose a Profile</string>
    <string name="profile_type_resident">Resident</string>
    <string name="profile_type_condominium">Condominium</string>

    <!-- related with Services Activity -->
    <string name="cond_services_info">Services Info</string>
    <string name="lobby_info">Lobby Info</string>
    <string name="lobby">Lobby</string>
    <string name="syndic_info">Syndic Info</string>
    <string name="syndic">Syndic</string>
    <string name="name">Name:</string>
    <string name="call">Call</string>
    <string name="send_message">Message</string>
    <string name="send_email">Email</string>
    <string name="data_successfully_updated">Successfully updated</string>
    <string name="no_service_info">No Concierge Information provided</string>
    <string name="not_found_info_toast">Information not found</string>

    <!-- Bundle Keys -->
    <string name="bundle_event_date_key">DATE EVENT KEY</string>
    <string name="bundle_event_type_event">EVENT TYPE KEY</string>
    <string name="bundle_event_key">EVENT KEY</string>
    <string name="bundle_events_widget">EVENTS WIDGET</string>

    <!-- Shared Preferences -->
    <string name="file_key_pref">com.community.hmunguba.condominium</string>
    <string name="has_profile_type_pref">has_profile_type</string>
    <string name="profile_type_pref">profile_type</string>
    <string name="no_profile_type_set">no profile type set</string>
    <string name="no_cond_id_set">no cond id set</string>
    <string name="cond_id_pref">cond_id_pref</string>

    <!-- Menu actions -->
    <string name="action_delete_profile">Delete Profile</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_delete_event">Delete event</string>

    <!-- accessibility -->
    <string name="accessibility_cond_image">Condominium image</string>
    <string name="accessibility_resident_image">Resident image</string>
    <string name="accessibility_building_main_icon">building main image</string>
    <string name="accessibility_building_icon">building icon</string>
    <string name="accessibility_location_icon">location icon</string>
    <string name="accessibility_date_icon">date icon</string>
    <string name="accessibility_event_name_icon">event name icon</string>
    <string name="accessibility_number_of_participants_icon">number of participants icon</string>
    <string name="accessibility_phone_icon">phone icon</string>
    <string name="accessibility_message_icon">message icon</string>
    <string name="accessibility_mail_icon">mail icon</string>
    <string name="accessibility_person_icon">person icon</string>
    <string name="accessibility_clock_icon">clock icon</string>
    <string name="accessibility_event_icon">event icon</string>
    <string name="accessibility_city_icon">city icon</string>
    <string name="accessibility_call_lobby">call lobby icon</string>
    <string name="accessibility_message_lobby">send message to lobby icon</string>
    <string name="accessibility_call_syndic">call syndic icon</string>
    <string name="accessibility_message_syndic">send syndic a message icon</string>
    <string name="accessibility_email_syndic">send syndic an email icon</string>
    <string name="accessibility_resident_profile_type">resident profile type</string>
    <string name="accessibility_cond_profile_type">condominium profile type</string>
    <string name="accessibility_appwidget_text">Condominium next events</string>
    <string name="accessibility_menu_item">Menu item</string>

    <!-- widget -->
    <string name="appwidget_text">Condominium next events</string>
    <string name="add_widget">Add widget</string>
    <string name="load_events_widget_btn">Tap to load events</string>
</resources>