<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/event_detail_general_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/general_info"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/event_detail_day_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/event_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/event_detail_day_ed"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_general_info_title"/>

    <EditText
        android:id="@+id/event_detail_day_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/event_detail_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/event_detail_name_ed"/>

    <EditText
        android:id="@+id/event_detail_name_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_day_ed"/>

    <TextView
        android:id="@+id/event_detail_amount_of_people_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/event_amount_of_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/event_detail_amount_of_people_ed"/>

    <EditText
        android:id="@+id/event_detail_amount_of_people_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_name_ed"/>

    <TextView
        android:id="@+id/event_detail_reserved_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/event_reserved_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_amount_of_people_ed"/>

    <LinearLayout
        android:id="@+id/common_areas_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_reserved_area_title"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <CheckBox
            android:id="@+id/gourmet_area_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gourmet_area" />

        <CheckBox
            android:id="@+id/pool_area_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pool_area" />

        <CheckBox
            android:id="@+id/barbecue_area_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barbecue_area" />

        <CheckBox
            android:id="@+id/movies_area_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies_area" />

        <CheckBox
            android:id="@+id/party_room_area_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_room_area" />

        <CheckBox
            android:id="@+id/sports_area_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports_court_area" />
    </LinearLayout>

    <TextView
        android:id="@+id/event_detail_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/common_areas_content"/>

    <LinearLayout
        android:id="@+id/event_detail_time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_time_title"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_begin_time"/>

        <EditText
            android:id="@+id/event_detail_time_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_end_time"/>

        <EditText
            android:id="@+id/event_detail_time_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />

    </LinearLayout>

    <Button
        android:id="@+id/event_detail_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_time_container" />

</android.support.constraint.ConstraintLayout>