<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- No Service info -->
    <TextView
        android:id="@+id/no_service_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_service_info"
        android:gravity="center"
        android:visibility="gone"/>


    <!-- Lobby -->
    <TextView
        android:id="@+id/lobby_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lobby"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="12dp"
        android:textSize="50sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Call lobby -->
        <android.support.v7.widget.CardView
            android:id="@+id/call_lobby_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="@color/whiteDark2"
            android:layout_marginRight="36dp"
            android:contentDescription="@string/accessibility_call_lobby">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_phone"
                    android:contentDescription="@string/accessibility_phone_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/call"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Send message lobby -->
        <android.support.v7.widget.CardView
            android:id="@+id/send_message_lobby_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="@color/whiteDark2"
            android:contentDescription="@string/accessibility_message_lobby">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_message"
                    android:contentDescription="@string/accessibility_message_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/send_message"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!-- Syndic -->
    <TextView
        android:id="@+id/syndic_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/syndic"
        android:layout_margin="12dp"
        android:textSize="50sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Call syndic -->
        <android.support.v7.widget.CardView
            android:id="@+id/call_syndic_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="@color/whiteDark2"
            android:layout_marginRight="36dp"
            android:contentDescription="@string/accessibility_call_syndic">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_phone"
                    android:contentDescription="@string/accessibility_phone_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/call"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Send message syndic -->
        <android.support.v7.widget.CardView
            android:id="@+id/send_message_syndic_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="@color/whiteDark2"
            android:layout_marginRight="36dp"
            android:contentDescription="@string/accessibility_message_syndic">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_message"
                    android:contentDescription="@string/accessibility_message_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/send_message"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Send email syndic -->
        <android.support.v7.widget.CardView
            android:id="@+id/send_email_syndic_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="@color/whiteDark2"
            android:contentDescription="@string/accessibility_email_syndic">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_mail"
                    android:contentDescription="@string/accessibility_mail_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/send_email"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
