<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    app:layout_constraintCircleRadius="8dp">

    <TextView
        android:id="@+id/appwidget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/accessibility_appwidget_text"
        android:layout_alignParentTop="true"
        android:text="@string/appwidget_text"
        android:textColor="@color/textColor"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/load_events_widget_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/load_events_widget_btn"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/textColor"

        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/widget_no_event_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_scheduled_events"
        android:layout_centerInParent="true"
        android:textColor="@color/textColor"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/widget_events_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appwidget_title"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"/>

</RelativeLayout>